# DS

./: .gitignore  README.md  dspro_vkr_local.session.sql  pyproject.toml  pyrightconfig.json  requirements-runtime-v2.txt  requirements-streamlit-v2.txt  requirements-v2.txt  requirements.txt  streamlit_app.py
Baum_dspro_vkr_research/src/: db_test.py  (+1 more)
DS/: .gitignore  requirements.txt
analysis/: README.md  __init__.py  visual_theme.py
data/: README.md  model_gaussian_params.json  router_gaussian_params.json
docs/: documentation_audit_tz_ru.md  documentation_style_ru.md  model_comparison_findings_ru.md  model_comparison_protocol_ru.md  model_validation_dependency_spike_ru.md  model_validation_protocol_ru.md  notebook_review_2026-03-13_ru.md  ood_unknown_baselines_tz_ru.md  ood_unknown_tz_ru.md  orchestrator_host_prioritization_canon_ru.md  preprocessing_and_comparison_tz_ru.md  preprocessing_pipeline_ru.md  project_audit_findings_ru.md  project_audit_fix_plan_ru.md  project_audit_mapping_ru.md  project_audit_plan_ru.md  project_audit_synthesis_ru.md  repository_state_policy_ru.md  vkr_requirements_traceability_ru.md
sql/: 2026-03-11_gaia_results_posterior_host_fields.rollback.sql  2026-03-11_gaia_results_posterior_host_fields.sql  2026-03-13_gaia_results_unknown_constraints.rollback.sql  2026-03-13_gaia_results_unknown_constraints.sql  2026-03-19_gaia_priority_results_runtime_factors.rollback.sql  2026-03-19_gaia_priority_results_runtime_factors.sql
src/: db_test.py  decision_layer_calibrator.py  decision_layer_logbook.py  eda.py  gaussian_histograms.py  gaussian_router.py  input_layer.py  model_comparison.py  model_gaussian.py  program_run_logbook.py  router_eda.py  star_orchestrator.py
tests/: README.md  __init__.py  conftest.py  test_decision_calibration_reporting.py  test_decision_layer_calibrator.py  test_decision_layer_calibrator_facade.py  test_eda.py  test_gaussian_router.py  test_infra_db.py  test_infra_relations.py  test_input_layer.py  test_input_layer_db_integration.py  test_logbooks.py  test_model_comparison_cli.py  test_model_comparison_contrastive.py  test_model_comparison_data.py  test_model_comparison_facade.py  test_model_comparison_legacy_gaussian.py  test_model_comparison_mlp.py  test_model_comparison_presentation_assets.py  test_model_comparison_quality.py  test_model_comparison_random_forest.py  test_model_comparison_reporting.py  test_model_comparison_snapshot.py  test_model_comparison_tuning.py  test_model_comparison_validation.py  test_model_gaussian.py  test_model_validation.py  test_notebook_hygiene.py  test_priority_pipeline.py  test_priority_pipeline_branching.py  test_priority_pipeline_db_integration.py  test_priority_pipeline_export.py  test_priority_pipeline_facade.py  test_priority_pipeline_input_data.py  test_priority_pipeline_persist.py  test_priority_pipeline_relations.py  test_router_eda.py  test_router_ood.py  test_runtime_artifacts.py  (+1 more)
(+892 files in other folders)
