[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dspro-vkr"
version = "0.1.0"
description = "Research and production tooling for physically grounded exoplanet-host prioritization."
readme = "README.md"
requires-python = ">=3.13"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[tool.setuptools.packages.find]
where = [".", "src"]
include = [
    "analysis",
    "analysis.*",
    "decision_calibration",
    "decision_calibration.*",
    "devtools",
    "devtools.*",
    "host_model",
    "host_model.*",
    "input_layer",
    "input_layer.*",
    "infra",
    "infra.*",
    "logbooks",
    "logbooks.*",
    "priority_pipeline",
    "priority_pipeline.*",
    "router_model",
    "router_model.*",
]
exclude = [
    "tests",
    "tests.*",
]

[tool.ruff]
target-version = "py313"
line-length = 100
src = ["src", "tests", "analysis"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.13"
mypy_path = "src:."
files = ["src", "tests", "analysis"]
pretty = true
show_error_codes = true
warn_unused_configs = true
ignore_missing_imports = true
exclude = "(^experiments/|^notebooks/)"

[tool.pytest.ini_options]
markers = [
    "db_integration: DB-backed интеграционные тесты на временной схеме Postgres",
]
